[package]
name = "LinuxMonitor"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.23"
sysinfo = "0.28.1"
tokio-postgres = "0.7.7"
tokio = {version = "1.26.0", features = ["full"]}
rand = "0.8.5"
r2d2_postgres = "0.18.1"
r2d2 = "0.8.10"
tokio-util = "0.7"
csv = "1.2.1"
futures = "0.3"
rand_distr = "0.4.3"
aes = "0.7.5"
block-modes = "0.8.1"